# Flight-Anomaly-Detector

./: .gitignore  README.md
Flight Anomaly Detector/: CMakeLists.txt
Flight Anomaly Detector/include/: AnomalyDetector.h  CLI.h  HybridAnomalyDetector.h  Server.h  SimpleAnomalyDetector.h  commands.h  minCircle.h  timeseries.h
Flight Anomaly Detector/src/: CLI.cpp  HybridAnomalyDetector.cpp  MainTrain.cpp  Server.cpp  SimpleAnomalyDetector.cpp  anomaly_detection_util.cpp  minCircle.cpp  timeseries.cpp
